# MarketPulse

./: .env.example  .gitignore  .replit  AGENTS.md  CONTRIBUTING.md  README.md  app.py  app_init.py  config.py  database.py  proxy.py  pyproject.toml  replit.md  start.sh
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: ci.yml
backend/: README.md
docs/: architecture.md  contributing.md  getting-started.md  local_development.md  pr2_pr3_integration_targets.md  refactor_guardrails.md  repo_rules.md  roadmap.md
docs/adr/: 0000-adr-template.md  0001-technology-stack.md  0002-api-first-architecture.md
frontend/: README.md
page_modules/: fundamental_analysis.py
refactor_staging/pr2/: README.md  database.py
refactor_staging/pr2/live_replacements/: database.py
refactor_staging/pr2/utils/: data_fetcher.py
refactor_staging/pr3/: README.md  app_integration_patch.md  app_runtime.py
scripts/: install_deps.py
tests/: conftest.py  test_app_init.py  test_app_runtime.py  test_backtester.py  test_cache.py  test_ci_config.py  test_circleci_config.py  test_config.py  test_data_fetcher.py  test_database.py  test_database_changes.py  test_database_helpers.py  test_database_root.py  test_intervals.py  test_logging_config.py  test_market_status.py  test_news_fetcher.py  test_pr2_data_fetcher.py  test_pr2_database_utils.py  test_project_config.py  test_pyproject.py  test_sec_fetcher.py  test_trend_signals.py  test_uv_lock.py
utils/: ai_valuation.py  backtester.py  cache.py  charts.py  data_fetcher.py  exceptions.py  fundamentals.py  intervals.py  logging_config.py  market_status.py  news_fetcher.py  sec_fetcher.py  trend_signals.py
