[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "feedparser>=6.0.11",
    "numpy>=2.3.1",
    "openai>=2.1.0",
    "pandas>=2.3.0",
    "pandas-market-calendars>=5.3.1.2",
    "plotly>=6.2.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.2.2",
    "requests>=2.32.4",
    "scipy>=1.17.1",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.46.1",
    "textblob>=0.19.0",
    "trafilatura>=2.0.0",
    "yfinance>=0.2.64",
    "urllib3>=2.6.3",
    "lxml-html-clean>=0.4.4",
    "pillow>=11.3.0",
    "protobuf>=6.33.5",
    "tornado>=6.5.5",
]

[project.optional-dependencies]
dev = [
    "ruff==0.6.9",
    "black==24.10.0",
    "pytest==8.0.0",
    "pytest-cov==5.0.0",
    "mypy==1.11.0",
    "pip-audit==2.8.0",
]
[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pandas-stubs>=3.0.0.260204",
    "pytest>=9.0.2",
    "ruff>=0.15.9",
    "scipy-stubs>=1.17.1.3",
    "types-pytz>=2026.1.1.20260402",
    "types-requests>=2.33.0.20260402",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
explicit_package_bases = true
warn_unused_configs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
  "plotly",
  "plotly.*",
  "yfinance",
  "feedparser",
  "textblob",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-ra"
